; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_vec3.c_vec3_transform.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_vec3.c_vec3_transform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vec3 = type { i32 }
%struct.matrix4 = type { i32 }
%struct.vec4 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vec3_transform(%struct.vec3* %0, %struct.vec3* %1, %struct.matrix4* %2) #0 {
  %4 = alloca %struct.vec3*, align 8
  %5 = alloca %struct.vec3*, align 8
  %6 = alloca %struct.matrix4*, align 8
  %7 = alloca %struct.vec4, align 4
  store %struct.vec3* %0, %struct.vec3** %4, align 8
  store %struct.vec3* %1, %struct.vec3** %5, align 8
  store %struct.matrix4* %2, %struct.matrix4** %6, align 8
  %8 = load %struct.vec3*, %struct.vec3** %5, align 8
  %9 = call i32 @vec4_from_vec3(%struct.vec4* %7, %struct.vec3* %8)
  %10 = load %struct.matrix4*, %struct.matrix4** %6, align 8
  %11 = call i32 @vec4_transform(%struct.vec4* %7, %struct.vec4* %7, %struct.matrix4* %10)
  %12 = load %struct.vec3*, %struct.vec3** %4, align 8
  %13 = call i32 @vec3_from_vec4(%struct.vec3* %12, %struct.vec4* %7)
  ret void
}

declare dso_local i32 @vec4_from_vec3(%struct.vec4*, %struct.vec3*) #1

declare dso_local i32 @vec4_transform(%struct.vec4*, %struct.vec4*, %struct.matrix4*) #1

declare dso_local i32 @vec3_from_vec4(%struct.vec3*, %struct.vec4*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
